# TLSFAllocator

./: CMakeLists.txt  GenerateProject_Mac.sh  GenerateProject_Win.bat  README.md  RunTest_Mac.sh  TLSFAllocator.sln
TLSFAllocator/: TLSFAlgoHelper.h  TLSFAllocator.cpp  TLSFAllocator.h  TLSFAllocator.vcxproj  TLSFAllocator.vcxproj.filters  Wrapper.cpp  Wrapper.h
TLSFAllocatorTest/: TLSFAllocator.h  TLSFAllocatorTest.cpp  TLSFAllocatorTest.vcxproj  TLSFAllocatorTest.vcxproj.filters
src/: API.cpp  BlockFooter.h  BlockHeader.h  CMakeLists.txt  FreeBlockList.cpp  FreeBlockList.h  Helper.h  TLSFAlgoHelper.h  TLSFAllocator.cpp  TLSFAllocator.h  Wrapper.cpp  Wrapper.h
test/: CMakeLists.txt  DynamicLinkLibrary.h  TLSFAllocator.cpp  TLSFAllocator.h  TLSFAllocatorTest.cpp
